# pytest-ml-tdd-example

./: .gitignore  README.md  pyproject.toml
src/pytest_ml_tdd_example/models/: __init__.py
src/pytest_ml_tdd_example/training/: __init__.py  test.py  train.py
tests/: conftest.py  main_test.py
