[project]
name = "pytest-ml-tdd-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Shunsuke KITADA", email = "shunsuke.kitada.0831@gmail.com" },
]
requires-python = ">=3.11"
dependencies = ["pytest-sugar>=1.1.1", "torch>=2.9.1", "torchvision>=0.24.1"]

[build-system]
requires = ["uv_build>=0.9.3,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = ["mypy>=1.0.0", "pytest>=6.0.0", "ruff>=0.1.5"]

[tool.pytest.ini_options]
addopts = '--basetemp="./workspace"'
